     changing) map [Kevin Madauss].
   
   o FEATURE: Add a variable reduce-molecule-updates-current, that
     when set by the user causes an update of the probed molecule, not
     the generation of a new one [Bob Nolte].

   o FEATURE: Add Terminal Residue now assigns the correct residue
     type (if a PIR sequence has been given for side-chain docking) 
     [Bob Nolte].

   o FEATURE: "Pukka Puckers?" validation tool for RNA.  From Davis et
     al. (2007) Molprobity: all atom contacts and structure
     validation for proteins and nucleic acids, Nucleic Acids
     Research 35, W375-W383.

   o FEATURE: "Active site" hilighting.  Cheep and cheerful solid
     modelling of ligand and neighbouring residues [Herb Klei].

   o FEATURE: Double-clicking on an atom labels it (CCP4mg
     compatibility).

   o FEATURE: "Eigen-flip" function added.  Use to quickly flip around
     ligands.

   o FEATURE: Refmac can be run from Coot without the user having to
     explicitly set the column labels.

   o FEATURE: NCS Copy Chain is now available as a GUI extension.

   o FEATURE: The "About" dialog contains references. 

   o CHANGE: Key bindings mechanism has changed.  Now we are able to
     display key binding in a GUI widget.

   o CHANGE: Picking has been changed to somewhat favour those atoms
     at the front of the slab.

   o CHANGE: When deleting a residue while displaying validation
     graphs, the graphs get updated immediately [JED]

   o CHANGE: In CA display mode, only CAs can now be picked.

   o CHANGE: Nudge centre axes are now relative to the screen rather
     than in world coordinates.

   o CHANGE: NCS skipping changed.  Hopefully faster now [Steven
     Sheriff].  Also works in the case of hetero dimers with NCS [Phil
     Evans].

   o CHANGE: default bond width changed to 5.

   o CHANGE: Traffic lights verticalized.

   o CHANGE: Symmetry colour info added to state file [Doug Kuntz].
 